# cocos-emscripten-package

./: .gitignore  CMakeLists.txt  config.json  package-lock.json  package.json  sync-libs.js
.github/workflows/: compile.yml
js-hooks/: twgsl.pre.js
